--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -365,6 +365,7 @@ header {
 }
 .about__label-h3 {
   margin-bottom: 2.5rem;
+  order: unset;
 }
 .about__label-icon-wrapper {
   height: 4rem;
@@ -724,6 +725,8 @@ header {
   flex-direction: column;
 }
 .artist-dev__subheader {
+  order: 1;
+
   color: var(--primary);
   display: inline;
   max-width: 15rem;
@@ -738,11 +741,13 @@ header {
   margin-bottom: 1rem;
 }
 .artist-dev__header {
+  order: 2;
   font-size: 2.5rem;
   font-weight: 800;
   margin-bottom: 3rem;
 }
 .artist-dev__text {
+  order: 3;
   font-size: 1.25rem;
   color: var(--accent1);
   font-weight: 400;
@@ -755,6 +760,7 @@ header {
   margin-bottom: 6rem;
 }
 .artist-dev-icons-wrapper {
+  order: 4;
   display: flex;
   gap: 3.75rem;
 }
@@ -1027,6 +1033,7 @@ header {
   margin-bottom: 4.75rem;
 }
 .success__header {
+  order: 2;
   font-size: 2.5rem;
   font-weight: 800;
   margin-bottom: 2.5rem;
@@ -1035,6 +1042,7 @@ header {
   font-weight: 500;
 }
 .success__subheader {
+  order: 1;
   font-size: 0.75rem;
   font-weight: 600;
   color: var(--accent1);
@@ -1043,6 +1051,7 @@ header {
   margin-bottom: 1rem;
 }
 .success__text {
+  order: 3;
   font-size: 1.25rem;
   color: var(--accent1);
   max-width: 660px;
@@ -1615,7 +1624,6 @@ header {
   .artist-dev-icons-wrapper {
     gap: 1rem;
     flex-direction: column;
-    width: 100%;
     margin-bottom: 3rem;
   }
   .statistics--screen-sm {
